--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,16 +1,13 @@
 name: workflow
-
 on:
   push:
     branches:
       - main
     paths-ignore:
       - 'README.md'
-
 permissions:
   id-token: write
   contents: read
-
 jobs:
   integration:
     name: Continuous Integration
@@ -18,13 +15,10 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
       - name: Lint code
         run: echo "Linting repository"
-
       - name: Run unit tests
         run: echo "Running unit tests"
-
   build-and-push-ecr-image:
     name: Continuous Delivery
     needs: integration
@@ -32,23 +26,19 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
       - name: Install Utilities
         run: |
           sudo apt-get update
           sudo apt-get install -y jq unzip
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
@@ -59,42 +49,41 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
   Continuous-Deployment:
     needs: build-and-push-ecr-image
     runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-
       - name: Pull latest image
         run: |
           docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-
-      # Optional: Stop and remove any existing container with the same name
-      # - name: Stop and remove running container
-      #   run: |
-      #     docker ps -q --filter "name=networksecurity" | grep -q . && docker stop networksecurity && docker rm -fv networksecurity
-
+      - name: Stop and remove existing container
+        run: |
+          docker ps -q --filter "name=deliverytimeecr" | grep -q . && docker stop deliverytimeecr && docker rm -fv deliverytimeecr || echo "No existing container to remove"
       - name: Run Docker Image to serve users
         run: |
-          docker run -d -p 8080:8080 --ipc="host" --name=deliverytimeecr \
+          docker run -d -p 8080:8000 --name=deliverytimeecr \
             -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
             -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
             -e AWS_REGION=${{ secrets.AWS_REGION }} \
             ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-
+      - name: Wait for container to start
+        run: |
+          sleep 10
+          docker ps --filter "name=deliverytimeecr"
+      - name: Check container logs
+        run: |
+          docker logs deliverytimeecr
       - name: Clean previous images and containers
         run: |
           docker system prune -f
